awssso_client: remove ARN parsing
permission set name is not an actual role name; actual IAM role deployed
via AWS SSO would have different name! Removing ARN support from
parse_rolespec.

--- a/TODO
+++ b/TODO
@@ -4,7 +4,8 @@
   - $AWS_REGION
 - jump through local server to redirect_url
 - aws sso mode
-- device grant
+  - device grant
+  - refresh token
 - docker provider mode
 - mairu_tty
 - exec
