auto mode ('mairu exec auto')
    $ cat > .mairu.json
    {
      "server": "https://amc.example.net/api/remote/",
      "role": "arn:aws:iam::123412341234:role/MyRole"
    }
    $ mairu exec auto aws sts get-caller-identity
    {
        "UserId": "...:...",
        "Account": "123412341234",
        "Arn": "arn:aws:sts::123412341234:assumed-role/MyRole/..."
    }

--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
 - auto mode
-  - directory trust
   - auto install server configuration
   - $AWS_REGION
 - jump through local server to redirect_url
@@ -8,3 +7,5 @@
 - exec
   - signals
 - background autorefresh
+- lock
+- trust signature
